i got the changing of volume icons working, and i was even able to improve on the old system, so it no longer has a repetition of the ...style.visibility.hidden 12 times, and rather i made a function that only has that statement once, and i'm quite proud of having done something in a not dumb way, and the icons change now which is good, onto the queue, and account picture, which i will leave as a square for now, since i might be using hippo shapes, so it has to be able to adjust to that

--- a/src/new/web/Orange-Music-2/css/topright.css
+++ b/src/new/web/Orange-Music-2/css/topright.css
@@ -48,7 +48,7 @@
     filter: none !important;
 }
 
-.svg-image-buttons-relative-container {
+.TOPRIGHT-svg-image-buttons-relative-container {
     position: relative;
     width: 100%;
     height: 100%;
@@ -56,7 +56,7 @@
     filter: none;
 }
 
-.svg-image-buttons-absolute-container {
+.TOPRIGHT-svg-image-buttons-absolute-container {
     position: absolute;
     margin: 0;
     top: 50%;
@@ -104,6 +104,7 @@
 
 .TOPRIGHT-accountcontrols-volumeslider-volumeIcons-container img {
     position: absolute;
+    left: -03%;
 }
 
 #volumeControlZero,
@@ -111,6 +112,7 @@
 #volumeControlTwo {
     visibility: hidden;
 }
+
 
 /* volume slider */
 #volumeSliderID {
@@ -136,9 +138,6 @@
 
     background: transparent;
     backdrop-filter: contrast(0.2) brightness(4);
-
-
-
 }
 
 #volumeSliderID input[type="range"]::-webkit-slider-thumb {
@@ -159,6 +158,8 @@
     background: transparent;
     cursor: pointer;
 }
+
+
 
 
 .TOPRIGHT-accountcontrols-buttonarea-container {
